--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -196,4 +196,17 @@ h1 {
 .subnav.fixed {
     position: fixed;
     top: 50px;
+    background-color: #f8f8f8;
+    border-bottom: 1px solid #e7e7e7;
+    width: 100%;
+    left: 0;
+    /*padding-left: 17%;*/
+
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+.subnav ul li {
+    display: inline-block;
+    float: none;
 }
