--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -35,7 +35,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat fixed center center;
+    background: url(../img/salt-lake.jpg) no-repeat fixed center center;
     background-size: cover;
 }
 
@@ -58,7 +58,8 @@ h6 {
 }
 
 .intro-message > h3 {
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    /*text-shadow: 2px 2px 3px rgba(0,0,0,0.6);*/
+    text-shadow: 2px 3px 1px rgba(0,0,0,0.6);
 }
 
 @media(max-width:767px) {
@@ -116,7 +117,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat fixed center center;
+    background: url(../img/salt-bg.jpg) no-repeat fixed center center;
     background-size: cover;
 }
 
