--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -211,3 +211,18 @@ h1 {
     display: inline-block;
     float: none;
 }
+
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.margin-bot-30 {
+    margin-bottom: 30px;
+}
+
+.center-div {
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    text-align: center
+}
