--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -88,7 +88,8 @@ h6 {
 
 .network-name {
     text-transform: uppercase;
-    font-size: 14px;
+    /*font-size: 14px;*/
+    font-size: 13px;
     font-weight: 400;
     letter-spacing: 2px;
 }
