--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -277,10 +277,20 @@ blockquote {
 
 .item-list-left {
     text-align: left;
+    -webkit-transform: translateX(-100px);
+    -moz-transform: translateX(-100px);
+    -ms-transform: translateX(-100px);
+    -o-transform: translateX(-100px);
+    transform: translateX(-100px);
 }
 
 .item-list-right {
     text-align: right;
+    -webkit-transform: translateX(100px);
+    -moz-transform: translateX(100px);
+    -ms-transform: translateX(100px);
+    -o-transform: translateX(100px);
+    transform: translateX(100px);
 }
 
 /*.item-list > [class*="col-"]:not(first-child) {*/
@@ -301,4 +311,13 @@ blockquote {
     border-bottom-left-radius: 50%;
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
+}
+
+.fade-in {
+    opacity: 0;
+    -webkit-transition: 1s ease-in-out;
+    -moz-transition: 1s ease-in-out;
+    -ms-transition: 1s ease-in-out;
+    -o-transition: 1s ease-in-out;
+    transition: 1s ease-in-out;
 }
